--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,2 +1,15 @@
-<h1>Songs#new</h1>
-<p>Find me in app/views/songs/new.html.erb</p>
+<h1>New Songs</h1>
+
+<%= form_for(@song) do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <%= f.label :released %>
+  <%= f.check_box :released %>
+  <%= f.label :release_year %>
+  <%= f.text_field :release_year %>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <%= f.label :genre %>
+  <%= f.text_field :genre %>
+  <%= f.submit %>
+<% end %>
